# learn-rust

./: Cargo.toml  README.md
src/: main.rs
src/application/place/: mod.rs  place_category_module.rs
src/application/users/: mod.rs  post_users_module.rs
src/config/: env.rs
src/outbound/: mod.rs
src/outbound/directus/: mod.rs  place_category.rs
src/outbound/mongodb/: adapter.rs  mod.rs
src/outbound/mongodb/model/: users.rs
src/outbound/mongodb/repository/: users.rs
