[package]
name = "learn-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }    # ✅ Enable "json" feature
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
bson = "2.8"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde_json = "1.0.140"
mongodb = "2.8.0"                                      # ✅ Ensure latest `mongodb` crate
uuid = { version = "1.4", features = ["v4", "serde"] } # ✅ Add `uuid`
chrono = { version = "0.4", features = ["serde"] }
